gke-k8s/helloworld-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloworld
  namespace: monitoring
spec:
  selector:
    app: helloworld
  ports:
    - name: web
      port: 8080          # External port
      targetPort: 8000    # Match the application's port
      protocol: TCP
  type: LoadBalancer
